<resources>
    <string name="app_name">ShopMart</string>
    <string name="message_sign_in">Please sign in first</string>
    <string name="message_remove_to_cart">Are you sure you want to remove this product?</string>
    <string name="message_logout_confirmation">Are you sure you want to logout?</string>
    <string name="message_account_created">Account successfully created!</string>
    <string name="product_list">Product List</string>
    <string name="add_product">Add Product</string>
    <string name="product_detail">Product Detail</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="account_information">Account Information</string>
    <string name="preference_file_key">ph.mart.shopmart</string>
    <string name="logout">Logout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="retry">Retry</string>
    <string name="successfully_login">Successfully Login</string>
    <string name="no_account">No Account</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="detail">Detail</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_minus">-</string>
    <string name="sign_plus">+</string>
    <string name="shop_now">Shop now</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="proceed">Proceed</string>
    <string name="image">image</string>
    <string name="total">Total</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back To Login</string>
    <string name="title_login">Login</string>
    <string name="title_base">Base</string>
</resources>