<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentProduct">

    <fragment
        android:id="@+id/fragmentProduct"
        android:name="ph.mart.shopmart.ui.product.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product">
        <action
            android:id="@+id/product_to_productDetail"
            app:destination="@id/productDetailFragment">
            <argument
                android:name="product"
                app:argType="ph.mart.shopmart.data.model.Product" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/fragmentAccountManager"
        android:name="ph.mart.shopmart.ui.accountmanager.AccountManagerFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_account_manager" />

    <fragment
        android:id="@+id/fragmentCart"
        android:name="ph.mart.shopmart.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/cart_to_product"
            app:destination="@id/fragmentProduct"
            app:popUpTo="@id/fragmentProduct"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/cart_to_productDetail"
            app:destination="@id/productDetailFragment">

            <argument
                android:name="product"
                app:argType="ph.mart.shopmart.data.model.Product" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="ph.mart.shopmart.ui.detail.ProductDetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="product"
            app:argType="ph.mart.shopmart.data.model.Product" />

        <action
            android:id="@+id/productDetail_to_accountManager"
            app:destination="@id/fragmentAccountManager"
            app:popUpTo="@id/productDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>